--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,22 +1,27 @@
 <!--index.wxml-->
 <view class="container">
-
-  <!-- 用户 openid -->
   <view class="userinfo">
-    <button 
-      open-type="getUserInfo" 
-      bindgetuserinfo="onGetUserInfo"
-      class="userinfo-avatar"
-      style="background-image: url({{avatarUrl}})"
-      size="default"
-    ></button>
-    <view class="userinfo-nickname-wrapper">
-      <button class="userinfo-nickname" bindtap="onGetRunData">点击获取微信步数</button>
-    </view>
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+    <block wx:else>
+      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    </block>
   </view>
+  <view class="usermotto">
+    <text class="user-motto">{{motto}}</text>
+  </view>
+</view>
 
+<view class="page-body">
+<block wx:for="{{list}}" data-item="item" wx:for-index="idx" >
+  <view>
+    {{item}};
+  </view>
+</block>
+</view>
 
-  
-
-
+<view class="page-body">
+  <view class="btn-area" id="buttonContainer">
+    <button bindtap="but" type="default" plain="true" bindtap = "getHosu">歩数取得</button>
+  </view>
 </view>
